# 8ms-nordic

./: README.md
ZX1D28NN01S-V01/: CMakeLists.txt  prj.conf  sample.yaml
ZX1D28NN01S-V01/boards/arm/nrf52840dk_nrf52840/: Kconfig.board  nrf52840dk_nrf52840.dts  nrf52840dk_nrf52840.yaml  nrf52840dk_nrf52840_defconfig
ZX1D28NN01S-V01/boards/arm/nrf5340dk_nrf5340/: CMakeLists.txt  Kconfig  Kconfig.defconfig  nrf5340_cpuapp_common.dts  nrf5340dk_nrf5340_cpuapp.dts  nrf5340dk_nrf5340_cpuapp_defconfig  nrf5340dk_nrf5340_cpuappns.yaml  nrf5340dk_nrf5340_cpuappns_defconfig  nrf5340pdk_nrf5340_cpuapp.yaml  nrf5340pdk_nrf5340_cpuapp_defconfig
ZX1D28NN01S-V01/main/: qm_ui_entry.c
ZX1D92NN01S-V01/: README.rst
ZX1D92NN01S-V01/boards/arm/nrf52840dk_nrf52840/: Kconfig  Kconfig.defconfig  nrf52840dk_nrf52840.dts
ZX1D92NN01S-V01/boards/arm/nrf52840dk_nrf52840/doc/: index.rst
ZX1D92NN01S-V01/boards/arm/nrf5340dk_nrf5340/: Kconfig.board  board.cmake  nrf5340_cpuapp_partition_conf.dts  nrf5340_cpunet_reset.c  nrf5340dk_nrf5340_cpuapp.yaml  nrf5340dk_nrf5340_cpuappns.dts  nrf5340dk_nrf5340_cpunet.dts  nrf5340dk_nrf5340_cpunet.yaml  nrf5340dk_nrf5340_cpunet_defconfig  nrf5340pdk_nrf5340_cpuapp.dts  nrf5340pdk_nrf5340_cpuappns.dts  nrf5340pdk_nrf5340_cpuappns.yaml  nrf5340pdk_nrf5340_cpuappns_defconfig  nrf5340pdk_nrf5340_cpunet.dts  nrf5340pdk_nrf5340_cpunet.yaml  nrf5340pdk_nrf5340_cpunet_defconfig
ZX1D92NN01S-V01/boards/arm/nrf5340dk_nrf5340/doc/: index.rst
ZX1D92NN01S-V01/main/: ali_font_16.c  logo.c  main.c  qm_ui_entry.h
